# Rosalind

./: .gitignore  Notes.md  README.md
Adam_James_Java_8/: 1_rosalind_dna.txt  2_rosalind_rna.txt  pom.xml
AndyB_Python/: dna.py  dna_test.py  fasta.py  fasta_test.py  fibonacci.py  fibonacci_test.py  mendel.py  mendel_test.py  rna.py  rna_test.py
AndyB_Python/data/: rnaTranslation.txt
Chris_CPP12/: .gitignore  .gitmodules  CMakeLists.txt  Codon.cpp  Codon.h  Common.h  DNA.cpp  DNA.h  FIB.cpp  FIB.h  Fasta.cpp  Fasta.h  GC.cpp  GC.h  HAMM.cpp  HAMM.h  PROT.cpp  PROT.h  REVC.cpp  REVC.h  RNA.cpp  RNA.h  config.bat  main.cpp
Chris_CPP12/shared/utils/: StringUtils.cpp  StringUtils.h
David_Chris_FSharp/: Rosalind.fs
David_FSharp_Simple/: AssemblyInfo.fs  Problem2.fs  Problem3.fs  Problem4.fs  Problem5.fs  Problem6.fs  Problem7.fs  Program.fs  RosalindSolution.fsproj  RosalindSolution.sln  Utilities.fs  problem1.fs
Giuseppe_C/: main.c
Grant_Elixir/: problem3.exs  problem_2_dataset.txt
Grant_Elixir/Problem 1/: problem1.exs  problem_1_result.txt
Problem 1/: Problem1.md  problem_1_answer.txt  problem_1_dataset.txt
Problem 2/: Problem 2.md  problem_2_answer.txt
Problem 3/: Problem 3.md  problem_3_dataset.txt
Problem 4/: Problem 4.md  problem_4_answer.txt
Problem 5/: Problem 5.md  problem_5_dataset.txt
Problem 6/: Problem 6.md
Problem 7/: problem_7_answer.txt  problem_7_dataset.txt
Problem 8/: problem_8_answer.txt
Rory_Kris_Node/: .gitignore  README.md  index.js  package.json
asta_faisal_ruby/: Gemfile  README.md  task1.rb  task2.rb  task3.rb
(+18 files in other folders)
